tests/errors/maskr_incorrect_bit_size.f90
program example
   print*, maskr(63)
end
